--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
   "description": "this is a module to add about me section to the website",
   "keywords": ["Drupal"],
   "license": "GPL-2.0+",
-  "homepage": "https://www.drupal.org/project/newyork1_aboutus",
+  "homepage": "https://www.drupal.org/sandbox/newyork1/2891897",
   "minimum-stability": "dev",
   "support": {
-    "issues": "http://drupal.org/project/issues/newyork1_aboutus",
-    "source": "http://cgit.drupalcode.org/newyork1_aboutus"
+    "issues": "https://github.com/secretmessage/aboutus/issues",
+    "source": "http://cgit.drupalcode.org/sandbox-newyork1-2891897"
   },
   "require": { }
 }
